--- a/payroll/file/t4arcasum.html
+++ b/payroll/file/t4arcasum.html
@@ -206,7 +206,7 @@
     <section id="details-elements"> 
 
 <details><summary id="year">Year </summary>
-<p>Enter the 4-digit calendar year for which you are preparing the T4A-RCA summary.</p>
+<p>Enter the 4 digits of the calendar year for which you are preparing the T4A-RCA summary.</p>
 </details>
 
 <details><summary id="acc">Payroll account number</summary>
