--- a/payroll/file/t4arcaslip.html
+++ b/payroll/file/t4arcaslip.html
@@ -237,7 +237,7 @@
             </div>
             <section class="mrgn-tp-md" id="details-elements">
 			<details><summary> Year </summary>
-<p>Enter the 4-digit calendar year for which you are preparing the T4A-RCA slip.</p>
+<p>Enter the 4 digits of the calendar year for which you are preparing the T4A-RCA slip.</p>
 </details>
 
 <details><summary>Box 12 &ndash; Refund to employer</summary>
