--- a/payroll/file/t4summary.html
+++ b/payroll/file/t4summary.html
@@ -210,7 +210,7 @@
  <details>
                     <summary>Year</summary>
                    
-        <p>Enter the last 2 digits of the calendar year for which you are filing the return.</p>
+        <p>Enter the last 2 digits of the calendar year for which you are preparing the T4 summary.</p>
 
                 </details>
     
