--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -199,30 +199,27 @@
  <div id="ajax-exception">
 <dl class="dl-horizontal">
 <dt>RESP payments</dt><dd>
-<p id="h-2-1">You <strong>must </strong>issue a T4A slip if <strong>either </strong>of the following apply:</p>
-
+<p id="h-2-1">You must issue a T4A slip if <strong>one </strong>of the following apply:</p>
 <ul>
-<li>Accumulated income payments made to a subscriber total is more than $50 in the calendar year </li>
-<li>Educational assistance payments made to a beneficiary total more than $50 in the calendar year </li>
+<li><strong>Total  accumulated income </strong>paid to a subscriber  is <strong>more than $50 </strong>in the calendar year </li>
+<li><strong>Total  educational assistance </strong>paid to a beneficiary  is <strong>more than $50 </strong>in the calendar year  </li>
 </ul>
 </dd>
 <dt>Tax-free savings account (TFSA)</dt><dd>
-<p>You must issue a T4A slip if the TFSA taxable amounts paid to a recipient total is more than $50 in the calendar year.</p>
+<p>You must issue a T4A slip if the total <strong>TFSA taxable amount </strong>paid to a recipient  is <strong>more than $50 </strong>in the calendar year</p>
 </dd>
 <dt>Group term life insurance benefits</dt><dd>
-
+<p>You must issue a T4A slip if you provide <strong>group term life insurance </strong>benefits if <strong>one </strong>of the following apply:</p>
 <ul>
-<li>If you provide <strong>former </strong>employees with taxable <strong>group term life insurance </strong>benefits, you <strong>always </strong>have to issue a T4A slips, even if the total of all remuneration paid in the calendar year is $500 of less. </li>
-<li>If you provide <strong>retirees </strong>with taxable group term life insurance benefits, you are only required to issue a T4A slip when they are the only income reported on the slip and the amount is <strong>greater than $50</strong>. </li>
+<li>Taxable amount is paid to a <strong>former employee, </strong>you <strong>always </strong>have to issue a T4A slip  </li>
+<li>Taxable amount paid to a <strong>retired </strong>employee is the <strong>only </strong>income reported on the slip and the total is <strong>more than $50 </strong>in the calendar year   </li>
 </ul>
-
 </dd>
 <dt>Administrator or trustee of a multi-employer plan (MEP)</dt><dd>
-<p>If you are the <strong>administrator or trustee of a MEP, </strong>you must issue a T4A slip if <strong>both </strong>of the following apply:</p>
-
+<p>You must issue a T4A slip if you are the <strong>administrator or trustee of a MEP </strong>and <strong>all </strong>of the following apply:</p>
 <ul>
-<li>You provide taxable benefits under the plan to employees or former employees </li>
-<li>The benefit is more than $25 </li>
+<li>You provide taxable benefits under a plan to employees (or former employees) </li>
+<li>The taxable amount paid to the employee is <strong>more than $25 </strong>in the calendar year </li>
 </ul>
 </dd>
 </dl>
