--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -201,8 +201,8 @@
 <dt>RESP payments</dt><dd>
 <p id="h-2-1">You must issue a T4A slip if <strong>one </strong>of the following apply:</p>
 <ul>
-<li><strong>Total  accumulated income </strong>paid to a subscriber  is <strong>more than $50 </strong>in the calendar year </li>
-<li><strong>Total  educational assistance </strong>paid to a beneficiary  is <strong>more than $50 </strong>in the calendar year  </li>
+<li>Total <strong>accumulated income</strong> paid to a subscriber  is <strong>more than $50 </strong>in the calendar year </li>
+<li>Total <strong>educational assistance</strong> paid to a beneficiary  is <strong>more than $50 </strong>in the calendar year  </li>
 </ul>
 </dd>
 <dt>Tax-free savings account (TFSA)</dt><dd>
