--- a/payroll/file/t4anrsum.html
+++ b/payroll/file/t4anrsum.html
@@ -234,6 +234,7 @@
 
 <details><summary id="h_0_8">Line 82 &ndash; Remittances</summary>
 <p>Report the total amount of tax you remitted to the CRA. You can get this amount from your most recent PD7A.</p>
+ <p>Learn more: <a href="/cra-arc/payroll/file/receiving.html">Receiving payroll correspondence from us</a>  </p>
 </details>
 
 <details><summary id="h_0_9">Difference</summary>
