--- a/payroll/file/t4arcasum.html
+++ b/payroll/file/t4arcasum.html
@@ -219,7 +219,8 @@
 
 <details><summary id="address">Name and address of custodian, or person who bought an interest in the RCA</summary>
 <p>Enter the full name and complete address of the custodian, or the person who bought an interest in the RCA, as the case may be.</p>
-<p>The custodian's name and payroll account number have to be the same as your PD7A.</p>
+<p>The custodian's name and payroll account number must be the same as your PD7A.</p>
+ <p>Learn more: <a href="/cra-arc/payroll/file/receiving.html">Receiving payroll correspondence from us</a>  </p>
 </details>
 
 <details><summary id="name">Name of the RCA trust</summary>
@@ -261,6 +262,7 @@
 
 <details><summary id="82">Line 82 &ndash; Remittances </summary>
 <p>Report the total amount of income tax you remitted to the CRA for your payroll account. You can get this amount from your most recent PD7A.</p>
+ <p>Learn more: <a href="/cra-arc/payroll/file/receiving.html">Receiving payroll correspondence from us</a>  </p>
 </details>
 
 <details><summary id="diff">Difference</summary>
