--- a/payroll/file/t4summary.html
+++ b/payroll/file/t4summary.html
@@ -299,7 +299,7 @@
 <details>
   <summary id="ln_82">Line 82 – Remittances</summary> 
 
-        <p>Report the total amount of payroll deductions and contributions you remitted to the CRA for your payroll account. You can get this amount from your most recent Form PD7A.</p>
+        <p>Report the total amount of payroll deductions and contributions you remitted to the CRA for your payroll account. You can get this amount from your most recent PD7A.</p>
     
 <h5> <span class="label label-info">Remuneration paid in calendar year 2020</span> Temporary Wage Subsidy (TWS)</h5> 
 <p>If you received the TWS in 2020, you must include the 10% TWS (that was claimed on the PD27) on Line 82 (remittances paid) of the 2020 T4 summary.</p>
