--- a/payroll/calculate/benefit/parking.html
+++ b/payroll/calculate/benefit/parking.html
@@ -378,7 +378,7 @@
 <h4>Non-taxable situation</h4>
 <p> Under the CRA's administrative policy, if you provide or reimburse an employee for parking for business purposes, the benefit is <strong>not</strong> taxable where the employee regularly has to use a vehicle to perform their duties of employment. The CRA considers "regularly" to be an average of at least 3 days in a 5 day work week.</p>
 <h4>Taxable and partially taxable situation</h4>
-<p>If the employee needs the use of the a vehicle for business purposes less frequently, the CRA will accept a proration of the benefit. For example, if the employee uses a vehicle in the course of their duties an average of 1 day in a 5 day work week, the value of the parking benefit may be reduced by 20%, which represents 1 day of business use out of a 5 day work week.</p>
+<p>If the employee needs the use of a vehicle for business purposes less frequently, the CRA will accept a proration of the benefit. For example, if the employee uses a vehicle in the course of their duties an average of 1 day in a 5 day work week, the value of the parking benefit may be reduced by 20%, which represents 1 day of business use out of a 5 day work week.</p>
 
 <p>To calculate the benefit, refer to: <a href="#h_2">Calculate the value of the benefit</a></p> 
 </details>
