--- a/payroll/file/distribute.html
+++ b/payroll/file/distribute.html
@@ -164,10 +164,10 @@ You <strong>must </strong>provide your employees or recipients with their slips 
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
-<dt> <a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-5.html#h-584108">ITR: 209</a></dt> <dd> Information returns (employee distribution) – 2 copies to employee</dd>
+<dt> <a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-5.html#h-584108">ITR: 209</a></dt> <dd> Distribution of taxpayers portions of returns – 2 copies to employee</dd>
 <dt> <a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-5.html#h-584108">ITR: 209(5)</a></dt> <dd> Distribution of taxpayers portions of returns</dd>
-<dt><a href="https://laws.justice.gc.ca/eng/regulations/C.R.C.%2C_c._385/page-3.html#docCont">CPP Reg: 13(1)</a></dt> <dd> Information returns (employee distribution) – 2 copies to employee </dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/SOR-97-33/page-2.html#docCont">IECPR: 14(1)</a></dt> <dd> Information returns (employee distribution) – 2 copies to employee </dd>
+<dt><a href="https://laws.justice.gc.ca/eng/regulations/C.R.C.%2C_c._385/page-3.html#docCont">CPP Reg: 13(1)</a></dt> <dd> Distribution of taxpayers portions of returns – 2 copies to employee </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/SOR-97-33/page-2.html#docCont">IECPR: 14(1)</a></dt> <dd> Distribution of taxpayers portions of returns – 2 copies to employee </dd>
 <dt> <a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-193.html#docCont">ITA: 230(1)</a></dt> <dd> Books and records </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-7.html#docCont">CPP: 24(2)</a></dt> <dd> Books and records </dd>
 <dt><a href=" https://laws-lois.justice.gc.ca/eng/acts/E-5.6/page-12.html#docCont ">EIA: 87(3)</a></dt> <dd> Books and records </dd>
