--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
@@ -5,6 +5,7 @@
    <![endif]-->
    <!--[if gt IE 8]><!-->
    <html class="no-js" lang="en" dir="ltr">
+	
       <!--<![endif]-->
       <head>
          <meta charset="utf-8">
@@ -463,7 +464,7 @@ margin-left: 38px;
      <details>
          <summary>Why use the proxy method</summary>
 <p>If you use the proxy method, you do not need to specifically identify and claim SR&amp;ED overhead and other expenditures for the tax year. Instead you use a formula to calculate a substitute amount called the <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/glossary.html#prprxy">prescribed proxy amount</a> (PPA).</p>
-<p>With the proxy method, you <strong>do not have to report</strong> the following amounts:</p>
+<p>With the proxy method, the substitute amount covers the following expenditures (so you don&rsquo;t need to report them):</p>
 <ul>
   <li>Salary or wages for support or clerical staff </li>
   <li>Office supplies</li>
@@ -485,14 +486,14 @@ margin-left: 38px;
   <li>the PPA may be less than the actual overhead and other expenditures incurred </li>
 </ul>
      </details>    
-<p>You cannot change the method you chose after you have submitted your SR&amp;ED claim.</p>
+<p>You cannot change the calculation method you chose after you have submitted your SR&amp;ED claim.</p>
 <p>If you don&rsquo;t  select a method, the CRA will process your claim using the traditional method.</p>             
 
 <p>For detailed information about choosing between the traditional or proxy methods, review <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/traditional-proxy-methods-policy.html">Traditional and Proxy Methods Policy</a>.</p>
 		 
                <!--<p>To learn more about selecting a method to calculate SR&amp;ED expenditures, review  <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4088/guide-form-t661-scientific-research-experimental-development-expenditures-claim-guide-form-t661.html#toc16">Part 3, Section A, T4088 guide to SR&ED Expenditures Claim</a>.</p>-->
 		 
-               <p>To compare how expenditures are treated under traditional vs proxy, review <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4088/guide-form-t661-scientific-research-experimental-development-expenditures-claim-guide-form-t661.html#ln162">Table 1, T4088 guide to SR&amp;ED Expenditures Claim</a>.</p>
+               <p>To compare how expenditures are treated under traditional vs. proxy, review <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4088/guide-form-t661-scientific-research-experimental-development-expenditures-claim-guide-form-t661.html#ln162">Table 1, T4088 guide to SR&amp;ED Expenditures Claim</a>.</p>
               
            
 
@@ -537,7 +538,7 @@ margin-left: 38px;
 <h3>How third-party payments differ from contract costs</h3>
 <p>Third-party payments are different from <a href="https://test.canada.ca/cra-arc/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html#h5">contract expeditures</a> in that the third party, such as a university or research institute, would have done the work anyway, regardless of your SR&amp;ED project.</p>
             <details>
-               <summary>Third-party payments vs contracts for SR&amp;ED work</summary>
+               <summary>Third-party payments vs. contracts for SR&amp;ED work</summary>
                <h4>Third-party payment</h4>
                <ul>
                   <li>The SR&amp;ED work is controlled by the performer </li>
