--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
@@ -267,8 +267,8 @@ margin-left: 38px;
           <li><a href="grouping.html" class="hidden-xs hidden-sm">Group work into SR&amp;ED projects</a>
         <a href="grouping.html#gc-document-nav" class="visible-xs visible-sm">Group work into SR&amp;ED projects</a> 
             </li>
-            <li><a href="report.html" class="hidden-xs hidden-sm">How to report SR&amp;ED expenditures</a>
-        <a href="report.html" class="visible-xs visible-sm">How to report SR&amp;ED expenditures</a> 
+            <li><a href="get-form.html" class="hidden-xs hidden-sm">Get the T661 expenditures claim form</a>
+        <a href="get-form.html" class="visible-xs visible-sm">Get the T661 expenditures claim form</a> 
             </li>
             <li><a href="calculate-1.html" class="active" aria-current="page">Calculate  allowable expenditures</a>
             </li>
