--- a/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
@@ -83,8 +83,8 @@
             </li>
         	<li><a href="grouping.html" class="active" aria-current="page">Group work into SR&amp;ED projects</a>
             </li>
-            <li><a href="report.html" class="hidden-xs hidden-sm">How to report SR&amp;ED expenditures</a>
-			    <a href="report.html#gc-document-nav" class="visible-xs visible-sm">How to report SR&amp;ED expenditures</a> 
+            <li><a href="get-form.html" class="hidden-xs hidden-sm">Get the T661 expenditures claim form</a>
+			    <a href="get-form.html#gc-document-nav" class="visible-xs visible-sm">Get the T661 expenditures claim form</a> 
             </li>
             <li><a href="calculate-1.html" class="hidden-xs hidden-sm">Calculate allowable expenditures</a>
                 <a href="calculate-1.html#gc-document-nav" class="visible-xs visible-sm">Calculate  allowable expenditures</a> 
@@ -274,7 +274,7 @@
 <nav class="mrgn-bttm-lg mrgn-tp-lg">
 </nav><nav class="mrgn-bttm-lg mrgn-tp-lg"><h3 class="wb-inv">Document navigation</h3>
     <ul class="pager">
-      <li class="next"><a href="report.html" rel="next"><span class="wb-inv">Next: </span>How to report SR&amp;ED expenditures</a></li>
+      <li class="next"><a href="get-form.html" rel="next"><span class="wb-inv">Next: </span>Get the T661 expenditures claim form</a></li>
   </ul>
   </nav>
            
