update link label

--- a/sred/scientific-research-experimental-development-tax-incentive-program/what-are.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/what-are.html
@@ -125,7 +125,7 @@
 <p>You will need to report any funding or assistance you receive in your SR&amp;ED claim.</p>
 		 <p>To learn more about other government funding and assistance, review:</p>
 		 <ul>
-			 <li><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/assistance-contract-payments-policy.html#s4_1_1">Assistance and Contract Payments Policy</a></li>
+			 <li><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/assistance-contract-payments-policy.html#s4_1_1">Section 4.1.1, Assistance and Contract Payments Policy</a></li>
 			<li><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/summary-provincial-territorial-research-development-tax-credits-december-31-2016.html">Summary of provincial and territorial R&amp;D tax credits</a></li>
 		 </ul>
 
