line edits: H2 & OTP

--- a/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
@@ -121,7 +121,7 @@
 <h2 class="h3">On this page</h2>
 <ul>
   <li><a href="#h1">What is an SR&amp;ED project</a></li>
-  <li><a href="#h2">How to group SR&amp;ED work into projects</a></li>
+  <li><a href="#h2">How to group eligible work into SR&amp;ED projects</a></li>
   <li><a href="#h3">Get support grouping SR&amp;ED work</a></li>
 </ul>
 <h2 id="h1">What is an SR&amp;ED  project </h2>
@@ -140,7 +140,7 @@
 <p>An SR&amp;ED project ends when new scientific or technological knowledge is gained, whether you were  successful in resolving the uncertainty or not. Your work may still be eligible even if the results you sought were not achieved.</p>
 <p>After you have grouped your work into SR&amp;ED projects, you can then determine the related expenditures that you may claim for the year.</p>
 <p>While some SR&amp;ED projects can last several years, you may only claim the expenditures incurred during the tax year for which you are claiming. </p>
-<h2 id="h2">How to group your eligible work into SR&amp;ED  projects </h2>
+<h2 id="h2">How to group eligible work into SR&amp;ED  projects </h2>
 <h3>Different ways to group work</h3>
 <p>The first step in grouping SR&amp;ED work into an SR&amp;ED project is to separate work that is done to achieve the scientific or technological  advancement from other work you may have done that is not SR&amp;ED.</p>
 <p>Depending on how your business projects are organized, there  are different ways you can group your SR&amp;ED work. </p>
