--- a/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
@@ -142,7 +142,7 @@
 <p>While some SR&amp;ED projects can last several years, you may only claim the expenditures incurred during the tax year for which you are claiming. </p>
 <h2 id="h2">How to group eligible work into SR&amp;ED  projects </h2>
 <h3>Different ways to group work</h3>
-<p>The first step in grouping SR&amp;ED work into an SR&amp;ED project is to separate work that is done to achieve the scientific or technological  advancement from other work you may have done that is not SR&amp;ED.</p>
+<p>The first step in grouping eligible work into an SR&amp;ED project is to separate work that is done to achieve the scientific or technological  advancement from other work you may have done that is not SR&amp;ED.</p>
 <p>Depending on how your business projects are organized, there  are different ways you can group your SR&amp;ED work. </p>
  
 <details>             
