--- a/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
@@ -208,7 +208,7 @@
       
 </div>
     
-<h3>Basic steps to grouping you work into a project</h3>
+<h3>Basic steps to grouping your work into a project</h3>
 <ol class="lst-stps">
     <li>
 	    <p><strong>Identify the activities</strong></p>
