--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -317,65 +317,40 @@
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you <strong>did not</strong> require your employee to travel in the course of their employment duties, the benefit from the allowance, advance or reimbursement paid to the employee is <strong>taxable</strong>. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step6">Step 6 - Calculate the value of the benefit to be included on the T4 slip</a> </p>  </li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step6">Step 5 - Calculate the value of the benefit to be included on the T4 slip</a> </p>  </li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If you required your employee to travel in the course of their employment duties, the benefit from the allowance, advance or reimbursement paid to the employee may not be taxable if they meet <strong>all conditions</strong>. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step3">Step 3 - Determine if there was business driving during the travel</a></p></li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step3">Step 3 - Determine if the allowance or reimbursement is reasonable</a></p></li>
 </ul>
 </li>
 
-<li><h3 id="step3">Determine if there was business driving during the travel</h3>
+<li><h3 id="step3">Determine if the allowance or reimbursement is reasonable</h3>
 
-<p><strong>Business driving</strong> is any driving done by an employee between work locations for purposes related to their employment duties. This includes regular places of employment and a point of call.</p>
-<p>Personal driving is any driving by an employee of a vehicle for purposes not related to their employment. </p>
-  
-<div data-ajax-replace="ajax/personal-vehicle.txt #ajax-regular"></div>
-<div data-ajax-replace="ajax/personal-vehicle.txt #ajax-pointcall"></div>
-<div data-ajax-replace="/cra-arc/payroll/calculate/benefit/vehicle-allowance.html #ajax-business"></div>
- 
-<hr>	
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If there is <strong>no business driving</strong>, the benefit from the allowance, advance or reimbursement paid to the employee is taxable. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step6">Step 6 - Calculate the value of the benefit to be included on the T4 slip</a></p></li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If there is business driving, the benefit from the allowance, advance or reimbursement paid to the employee may not be taxable. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span>  Continue to: <a href="#step4">Step 4 - Get the required records from your employee to confirm the travel expenses</a></p> </li>
-</ul>
-</li>
 
-<li><h3 id="step4">Get the required records from your employee to confirm the travel expenses</h3>
-<p>Your employee should keep records of the total number of kilometres travelled for business driving made with their own vehicle. For example:</p>
-<div data-ajax-replace="/cra-arc/payroll/calculate/benefit/vehicle-allowance.html #ajax-log"></div>
-<hr>
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you do <strong>not receive</strong> the required records and <strong>base the calculation</strong> of your allowance, advance or reimbursement on them, the benefit is taxable because it <strong>does not meet the requirements of the Income Tax Act</strong> for the benefit to be only based on business kilometres driven.</p> 
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step6">Step 6 - Calculate the value of the benefit to be included on the T4 slip</a></p></li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If your employee kept the required detailed records and you received a copy, the benefit from the allowance, advance or reimbursement may not be taxable.</p>
-<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step4">Step 5 - Determine if the benefit is taxable</a></p></li>
-</ul>
 </li>
 
 
 <li> <h3 id="step5">Determine if the benefit is taxable</h3>
-<p class="mrgn-bttm-lg">Generally, travel allowances or reimbursements you provide to your employees are taxable. Depending on your situation, the benefit may not be taxable under the Income Tax Act or the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>. </p>
+<p class="mrgn-bttm-lg">Generally, allowances or reimbursements for travel expenses you provide to your employees are taxable. Depending on your situation, the benefit may not be taxable under the Income Tax Act or the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>. </p>
 
 <h4>Situations</h4>
-<details><summary>Situation: Your employee is working <strong>part-time</strong></summary>
+<details><summary>Situation: Your employee is works <strong>part-time</strong></summary>
 <h4 id="part">Non-taxable situation</h4>
-<p>Under the Income Tax Act (ITA), if you paid an allowance or reimburse your part-time employee for travel expenses, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
+<p>Under the Income Tax Act (ITA), if you paid an allowance or a reimbursement to your part-time employee for reasonable travel expenses, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
 
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Your employee is <strong>either</strong>:
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col">a teacher or professor who works part-time in a <a href="https://www.canada.ca/en/employment-social-development/programs/designated-schools.html">designated educational institution in Canada</a> and provides service to the employer as a teacher or professor</li>
-<li class="cnjnctn-col">has additional employment or carries on a business outside of their employment with you</li>
+<li class="cnjnctn-col">A teacher or professor who works part-time in a <a href="https://www.canada.ca/en/employment-social-development/programs/designated-schools.html">designated educational institution in Canada</a> and provides service to you as a teacher or professor and the location of their employment is 80 kilometres or more from their home</li>
+<li class="cnjnctn-col">has other employment or carries on a business outside of their employment with you and they performed their employment duties at a location 80 kilometres or more from <strong>both</strong> their home <strong>and</strong> the place of the other employment or business</li>
 </ul></li>
 <li class="cnjnctn-col">Your employee incurs the expenses from travelling <strong>to and from the part-time job</strong> </li>
 <li class="cnjnctn-col">You and your employee are <strong>at arm's length</strong> </li>
-<li class="cnjnctn-col">The location of employment is <strong>80 kilometres or more from your employee's home</strong> (or from the other employment or business)</li>
+<li class="cnjnctn-col">The amount of the allowance or the reimbursement is reasonable (step 3)</li>
 </ul>
-<p class="mrgn-tp-md">A <strong>thorough review of the facts in each specific situation</strong> must be done. For example, the benefit may be taxable when your employee has multiple employment income from multiple part-time jobs. </p>
+<p class="mrgn-tp-md">A <strong>thorough review of the facts in each specific situation</strong> must be done to determine if the benefit is taxable. </p>
 <h4>Taxable situation</h4>
-<p>If the allowance or reimbursement you provide to your employee for travel expenses <strong>do not</strong> meet all of the conditions above, continue to: <a href="#other">Situation: Your employee is not part of the above situation</a></p>
-
+<p>If the allowance or the reimbursement you provide to your employee for travel expenses <strong>does not</strong> meet all of the conditions above, the benefit is taxable. </p>
+<p>Continue to: <a href="#step5">Calculate the value of the benefit to be included on the T4 slip</a></p>
 </details>
 
 <details><summary>Situation: Your employee is a <strong>salesperson, an agent selling property or negotiating contracts</strong></summary>
