--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -350,34 +350,31 @@
 <p class="mrgn-tp-md">A <strong>thorough review of the facts in each specific situation</strong> must be done to determine if the benefit is taxable. </p>
 <h4>Taxable situation</h4>
 <p>If the allowance or the reimbursement you provide to your employee for travel expenses <strong>does not</strong> meet all of the conditions above, the benefit is taxable. </p>
-<p>Continue to: <a href="#step5">Calculate the value of the benefit to be included on the T4 slip</a></p>
+<p>Continue to: <a href="#step5">Step 5 - Calculate the value of the benefit to be included on the T4 slip</a></p>
 </details>
 
-<details><summary>Situation: Your employee is a <strong>salesperson, an agent selling property or negotiating contracts</strong></summary>
+<details><summary>Situation: Your employee is a <strong>salesperson, an agent selling property or negotiating contracts or a member of the clergy</strong></summary>
 <h4 id="agent">Non-taxable situation</h4>
-<p>Under the Income Tax Act (ITA), if you paid an allowance or reimburse your employee who is a <strong>salesperson, an agent selling property or negotiating contracts</strong> for travel expenses, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
+<p>Under the Income Tax Act (ITA), if you paid an allowance or a reimbursement to your employee who is a <strong>salesperson, an agent selling property or negotiating contracts or a member of the clergy</strong> for travel expenses, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">Travel allowance is reasonable, for meal expenses this is generally up to $23 including taxes (higher amounts may be reasonable if the meal cost in a location is higher) (step 2)</li>
-<li class="cnjnctn-col">Expenses is in the course of their employment duties (steps 2 and 3)</li>
-<li class="cnjnctn-col">You can justify your position regarding the amount being reasonable (step 4)</li>
+<li class="cnjnctn-col">The expenses is related to the performance of their employment duties (step 2)</li>
+<li class="cnjnctn-col">The amount of the allowance or the reimbursement is reasonable (step 3)</li>
 </ul>
 
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/real-estate-agents.html#employee">Determine if the real estate agent is an employee or self employed</a> &ndash; CPP-EI explained</p>
-
 <h4>Taxable situation</h4>
-<p>If the allowance or reimbursement you provide to your employee for travel expenses <strong>do not</strong> meet all of the conditions above, the benefit is taxable.</p>
-
+<p>If the allowance or the reimbursement you provide to your employee for travel expenses <strong>do not</strong> meet all of the conditions above, the benefit is taxable.</p>
+<p>Continue to: <a href="#step5">Step 5 - Calculate the value of the benefit to be included on the T4 slip</a></p>
 </details>
 
 
 <details><summary>Situation: Your employee is a <strong>member of the Canadian Forces</strong> and it is for separation allowances under service regulations</summary>
 <h4 id="forces">Non-taxable situation</h4>
-<p>Under the Income Tax Act (ITA), if you paid an allowance or you reimburse your employee who is a <strong>member of the Canadian Forces</strong> for travel expenses and separation allowances under service regulations, the benefit is <strong>not </strong>taxable.</p>
+<p>Under the Income Tax Act (ITA), if you paid a travel and separation allowance under service regulations to your employee who is a <strong>member of the Canadian Forces</strong>, the benefit is <strong>not </strong>taxable.</p>
 
 <p>Learn more from the Department of National Defence: <a href="https://www.canada.ca/en/department-national-defence/corporate/policies-standards/compensation-benefits-instructions/chapter-209-transportation-expenses.html#sec-209-30">Chapter 209 - Transportation and Travelling Expenses</a></p>
 </details>
 
-<details><summary>Situation: Your employee or their employee's spouse (or common-law partner) <strong>spends more than 50% of the time</strong> on business-related activities </summary>
+<details><summary>Situation: You pay travel expenses on a business trip for your employee </summary>
 <h4 id="spouse">Non-taxable situation</h4>
 <p>Under the CRA's administrative policy, if you paid an allowance or reimburse your employee or their <strong>employee's spouse (or their common-law partner)</strong> for business-related travel expenses, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
