--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -376,15 +376,15 @@
 
 <details><summary>Situation: You pay travel expenses on a business trip for your employee </summary>
 <h4 id="spouse">Non-taxable situation</h4>
-<p>Under the CRA's administrative policy, if you paid an allowance or reimburse your employee or their <strong>employee's spouse (or their common-law partner)</strong> for business-related travel expenses, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
+<p>Under the CRA's administrative policy, if you paid travel expenses on a business trip to your employee for business-related travel expenses, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">Travel allowance is reasonable, for meal expenses this is generally up to $23 including taxes (higher amounts may be reasonable if the meal cost in a location is higher)</li>
+<li class="cnjnctn-col">The amount of the travel expenses paid is reasonable (step 2) </li>
 <li class="cnjnctn-col">You require their presence on the <strong>business trip to accomplish the business objectives</strong> of the trip</li>
-<li class="cnjnctn-col">Employee or their employee's spouse (or common-law partner) <strong>spends more than 50% of the time on business-related</strong> activities</li>
+<li class="cnjnctn-col">Employee or their spouse (or common-law partner) <strong>spends more than 50% of the time on business-related</strong> activities</li>
 
 </ul>
 
-<p>The benefit is considered from the employee's travelling expenses necessary to accomplish the business objectives of the trip.</p>
+<p>The amount of the expense which is not taxable is the amount of the employee's travelling expenses necessary to accomplish the business objectives of the trip.</p>
 
 <h4>Taxable situation</h4>
 <p>If the allowance or reimbursement you provide to your employee for travel expenses <strong>do not</strong> meet all of the conditions above, the benefit is taxable.</p>
@@ -393,9 +393,9 @@
 	 <li><span class="fas fa-check fa-li fa-lg text-success"></span> Free holiday or vacation you paid to your employee, the employee's family, or both </li>
 	 <li><span class="fas fa-check fa-li fa-lg text-success"></span> You pay a third party for a trip or vacation for your employee or their family</li>
  	<li><span class="fas fa-check fa-li fa-lg text-success"></span> Vacation property that you own and allow your employee to use for other than your business purpose</li>
-	<li><span class="fas fa-check fa-li fa-lg text-success"></span> Business trip extended by your employee, only the extension of the trip is taxable</li>
+	<li><span class="fas fa-check fa-li fa-lg text-success"></span> Business trip extended by your employee (only the cost the employer paid for the extension of the trip is a taxable benefit)</li>
  </ul>
-
+<p>Continue to: <a href="#step5">Step 5 - Calculate the value of the benefit to be included on the T4 slip</a></p>
 
 </details>
 
