--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -373,7 +373,7 @@
 <p>Learn more from the Department of National Defence: <a href="https://www.canada.ca/en/department-national-defence/corporate/policies-standards/compensation-benefits-instructions/chapter-209-transportation-expenses.html#sec-209-30">Chapter 209 - Transportation and Travelling Expenses</a></p>
 </details>
 
-<details><summary>Situation: You pay travel expenses on a business trip for your employee </summary>
+<details><summary>Situation: You pay travel expenses on a <strong>business trip for your employee </strong></summary>
 <h4 id="spouse">Non-taxable situation</h4>
 <p>Under the CRA's administrative policy, if you paid travel expenses on a business trip to your employee for business-related travel expenses, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
@@ -398,7 +398,22 @@
 
 </details>
 
-<details><summary>Situation: Your employee is a <strong>host of an incentive award trip for at least 90% of the day</strong> </summary>
+<details><summary>Situation: You reimburse travel expenses on a business trip for your <strong>employee’s spouse or common-law partner</strong> </summary>
+<h4 id="spouse">Non-taxable situation</h4>
+<p>Under the CRA's administrative policy, if you reimburse your <strong>employee's spouse or common-law partner</strong> for travel expenses, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
+<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col">The amount of the travel expenses paid for the spouse is reasonable (step 2)</li>
+<li class="cnjnctn-col">You requested the spouse or common-law partner to attend</li>
+<li class="cnjnctn-col">The spouse or common-law partner <strong>spent more than 50% of the time in business-related</strong> activities</li>
+</ul>
+<p>The benefit is considered from the employee's travelling expenses necessary to accomplish the business objectives of the trip.</p>
+<h4>Taxable situation</h4>
+<p>If the amount paid for travel expenses <strong>does not</strong> meet all of the conditions above, the benefit is taxable to the employee.</p>
+<p>Continue to: <a href="#step5">Step 5 - Calculate the value of the benefit to be included on the T4 slip</a></p>
+</details>
+
+
+<details><summary>Situation: Your employee acts as <strong>host of an incentive award trip</strong> </summary>
 <h4 id="host">Non-taxable situation</h4>
 <p>Under the CRA's administrative policy, if you paid an allowance or reimburse your employee, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
