--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -415,10 +415,9 @@
 
 <details><summary>Situation: Your employee acts as <strong>host of an incentive award trip</strong> </summary>
 <h4 id="host">Non-taxable situation</h4>
-<p>Under the CRA's administrative policy, if you paid an allowance or reimburse your employee, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
+<p>Under the CRA's administrative policy, if you paid travel expenses to your employee acting as host of an incentive award trip, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">You awards employees or customers with an <strong>incentive award trip</strong></li>
-<li class="cnjnctn-col">The trip was arranged for your employees or your customers</li>
+<li class="cnjnctn-col">The trip was arranged as an incentive award trip for your employees or your customers</li>
 <li class="cnjnctn-col">Your employee acts as <strong>host</strong> for the incentive trip</li>
 <li class="cnjnctn-col">Your employee works directly in business activities <strong>at least 90%</strong> of each day (a substantial part)</li>
 
@@ -427,7 +426,10 @@
 <p>Your employee's travelling expenses are considered necessary to accomplish the business objectives of the trip. </p>
 
 <h4>Taxable situation</h4>
-<p>If the allowance or reimbursement you provide to your employee for travel expenses <strong>do not</strong> meet all of the conditions above, it is a taxable benefit.</p>
+<p>If the travel expenses paid for your employee acting as host of the incentive award trip <strong>does not</strong> meet all of the conditions above, the benefit is taxable. </p>
+
+<p><strong>Only</strong> the cost the employer paid that is <strong>not</strong> related to business activities is a taxable benefit.</p>
+<p>Continue to: <a href="#step5">Step 5 - Calculate the value of the benefit to be included on the T4 slip</a></p>
 </details>
 	
 <details><summary>Situation: Your employee is <strong>not part of the above situation</strong> </summary>
