--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -547,7 +547,7 @@
   </details>
 <details>
 			<summary>Example 2 - Calculations</summary>
-<p>An employer paid an allowance of $5,200 to his employee for travel expenses. Employee sent to Niagara Falls in Ontario for 9 days to meet with key partners. Presence is required on all days with free time to tour Toronto at own expense. The airfaire for the employee is $1,300. The hotel cost is $300 per night for 13 nights for a total of $3,900.</p>
+<p>An employer paid an allowance of $5,200 to his employee for travel expenses. Employee sent to Niagara Falls in Ontario for 9 days to meet with key partners. The employee requested to stay an additional four nights after the end of the meetings and was allowed to do so by the employer. The extra days resulted in no increased cost for the flights, but four additional nights accommodations.  Presence is required on all days with free time to tour Toronto at own expense. The airfaire for the employee is $1,300. The hotel cost is $300 per night for 13 nights for a total of $3,900.</p>
 
 		<ul class="fa-ul lst-spcd mrgn-bttm-md mrgn-lft-lg">
                                     <li><span class="fa-stack text-success">
@@ -589,7 +589,7 @@
   </details>
 <details>
 			<summary>Example 3 - Calculations</summary>
-<p>An employer paid an allowance of $5,300 to his employee for travel expenses. An employee is sent to Niagara Falls in Ontario for 9 days to meet with key partners. Presence is required on all days with free time to tour Toronto at own expense. Employee brings spouse and stays for an extra 4 nights. The airfaire for the employee is $1,300 and for the spouse is $1,300. The hotel cost is $300 per night for 9 nights for a total of $2,700.</p>
+<p>New example here.</p>
 
 		<ul class="fa-ul lst-spcd mrgn-bttm-md mrgn-lft-lg">
                                     <li><span class="fa-stack text-success">
