--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -589,44 +589,9 @@
   </details>
 <details>
 			<summary>Example 3 - Calculations</summary>
-<p>New example here.</p>
+<p>New example here to be provided by Jeremiah.</p>
 
-		<ul class="fa-ul lst-spcd mrgn-bttm-md mrgn-lft-lg">
-                                    <li><span class="fa-stack text-success">
-                                       <span class="far fa-circle fa-stack-2x"></span>
-                                       <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                       </span><span class="mrgn-tp-0 text-muted h5">$5,300 is the total value of the travel allowances</span> 
-                                    </li>
-
- 				<li class="brdr-bttm">
-                                       <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
-                                       <span class="far fa-circle fa-stack-2x"></span>
-                                       <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                       </span>  <span class="mrgn-tp-0 text-muted h5">$4,000 ($2,700 for 9 nights + $1,300 airfaire for employee) is the amount of the travel allowance that is not taxable</span>
-                                       <div class="mrgn-tp-md"></div>
-                                    </li>
-			 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
-                                       <span class="fas fa-circle fa-stack-2x"></span>
-                                       <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                       </span> <span class="mrgn-tp-0 text-muted h5">$1,300 (airfaire for the spouse) is the value of the taxable benefit
-                                       </span></span> 
-                                    </li>
-			<li class="brdr-bttm">
-                                       <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
-                                       <span class="far fa-circle fa-stack-2x"></span>
-                                       <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                       </span>  <span class="mrgn-tp-0 text-muted h5">$0 because the employee does not reimburse the employer</span>
-                                       <div class="mrgn-tp-md"></div>
-                                    </li>
-
-                     	 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
-                                       <span class="fas fa-circle fa-stack-2x"></span>
-                                       <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                       </span> <span class="mrgn-tp-0 text-muted h5">$1,300 is the value of the benefit to be included on the employee's T4 slip in code 40
-                                       </span></span> 
-                                    </li>
 		
-                  </ul>	
 
 
   </details>
