--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -315,9 +315,9 @@
 <p id="require">You need to determine if the employee was required to travel in the course of their employment duties.</p>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you <strong>did not</strong> require your employee to travel in the course of their employment duties, the benefit from the allowance, advance or reimbursement paid to the employee is <strong>taxable</strong>. </p>
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you <strong>did not</strong> require your employee to travel in the course of their employment duties, the benefit from the allowance or the reimbursement paid to the employee is <strong>taxable</strong>. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step5">Step 5 - Calculate the value of the benefit to be included on the T4 slip</a> </p>  </li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If you required your employee to travel in the course of their employment duties, the benefit from the allowance, advance or reimbursement paid to the employee may not be taxable if they meet <strong>all conditions</strong>. </p>
+<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If you required your employee to travel in the course of their employment duties, the benefit from the allowance or the reimbursement paid to the employee may not be taxable if they meet <strong>all conditions</strong>. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step3">Step 3 - Determine if the allowance or reimbursement is reasonable</a></p></li>
 </ul>
 </li>
