--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -301,7 +301,7 @@
 <li>Refer to: <a href="disability.html">Your employee has a severe or prolonged impairment</a> </li>
 </ul>
 </div>
-
+<hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"> </span> If the travel expenses benefit is in <strong>one</strong> of the above special situation, <strong>do not</strong> continue to next step.  </li>
 
@@ -328,10 +328,10 @@
 <hr>
 <p>If the amount of the payment for travel expenses:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> is <strong>not</strong> reasonable, the benefit is taxable.</p>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step5">Step 5 - Calculate the value of the benefit to be included on the T4 slip</a></p></li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> is <strong>reasonable</strong> the benefit may not be taxable.</p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step4">Step 4 - Determine if the benefit is taxable</a> </p>  </li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span>is <strong>not</strong> reasonable, the benefit is taxable.</p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step5">Step 5 - Calculate the value of the benefit to be included on the T4 slip</a></p></li>
 </ul>
 
 </li>
